--- a/res/values/public.xml
+++ b/res/values/public.xml
@@ -689,6 +689,15 @@
     <public type="drawable" name="ic_masks_sticker2" id="0x7f0200ef" />
     <public type="drawable" name="pl_shuffle_active" id="0x7f02021b" />
     <public type="drawable" name="switch_to_on3" id="0x7f020252" />
+	<public type="drawable" name="kepchup" id="0x7f020283" />
+ 	<public type="drawable" name="comics_dc" id="0x7f020284" />
+ 	<public type="drawable" name="ruschannels" id="0x7f020285" />
+ 	<public type="drawable" name="neoru" id="0x7f020286" />
+ 	<public type="drawable" name="music_rus" id="0x7f020287" />
+ 	<public type="drawable" name="evill_genius" id="0x7f020288" />
+ 	<public type="drawable" name="my_spb" id="0x7f020289" />
+ 	<public type="drawable" name="mskcity" id="0x7f02028a" />
+ 	<public type="drawable" name="vilkaru" id="0x7f02028b" />
     <public type="layout" name="color_colorselectview" id="0x7f030000" />
     <public type="layout" name="color_hexview" id="0x7f030001" />
     <public type="layout" name="color_historyview" id="0x7f030002" />
@@ -711,6 +720,7 @@
     <public type="layout" name="tabs_bg" id="0x7f030013" />
 	<public type="layout" name="user_list_item" id="0x7f030014" />
 	<public type="layout" name="activity_change_user" id="0x7f030015" />
+	<public type="layout" name="activity_vendor_channels" id="0x7f030016" />
     <public type="anim" name="no_animation" id="0x7f040000" />
     <public type="anim" name="popup_in" id="0x7f040001" />
     <public type="anim" name="popup_out" id="0x7f040002" />
@@ -2821,6 +2831,7 @@
 	<public type="string" name="DialogAddNo" id="0x7f07082B" />
 	<public type="string" name="MaxUsersCount" id="0x7f07082C" />
 	<public type="string" name="IsCurrentUser" id="0x7f07082D" />
+	<public type="string" name="VendorChannels" id="0x7f07082e" />
     <public type="bool" name="isTablet" id="0x7f080000" />
     <public type="bool" name="useHardwareAcceleration" id="0x7f080001" />
     <public type="style" name="myBackgroundStyle" id="0x7f090000" />
@@ -3009,12 +3020,12 @@
     <public type="id" name="seekBarPrefBarContainer" id="0x7f0c0077" />
     <public type="id" name="tabsLayout" id="0x7f0c0078" />
     <public type="id" name="tabsText" id="0x7f0c0079" />
-	<public type="id" name="userPhoto" id="0x7f0c007A" />
-	<public type="id" name="userCurrent" id="0x7f0c007B" />
-	<public type="id" name="userName" id="0x7f0c007C" />
-	<public type="id" name="userPhone" id="0x7f0c007D" />
-	<public type="id" name="users_listview" id="0x7f0c007E" />
-	<public type="id" name="relativeLayout1" id="0x7f0c007F" />
+	<public type="id" name="userPhoto" id="0x7f0c007a" />
+	<public type="id" name="userCurrent" id="0x7f0c007b" />
+	<public type="id" name="userName" id="0x7f0c007c" />
+	<public type="id" name="userPhone" id="0x7f0c007d" />
+	<public type="id" name="users_listview" id="0x7f0c007e" />
+	<public type="id" name="relativeLayout1" id="0x7f0c007f" />
 	<public type="id" name="buttonAddUser" id="0x7f0c0080" />
     <public type="integer" name="google_play_services_version" id="0x7f0d0000" />
 </resources>
