--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -88,4 +88,5 @@
 	<item type="id" name="users_listview">false</item>
 	<item type="id" name="buttonAddUser">false</item>
 	<item type="id" name="relativeLayout1">false</item>
+	<item type="id" name="tvMultiuser">false</item>
 </resources>
