--- a/res/values/public.xml
+++ b/res/values/public.xml
@@ -2832,6 +2832,8 @@
 	<public type="string" name="MaxUsersCount" id="0x7f07082C" />
 	<public type="string" name="IsCurrentUser" id="0x7f07082D" />
 	<public type="string" name="VendorChannels" id="0x7f07082e" />
+	<public type="string" name="users_left" id="0x7f07082f" />
+    <public type="string" name="users_max" id="0x7f070830" />
     <public type="bool" name="isTablet" id="0x7f080000" />
     <public type="bool" name="useHardwareAcceleration" id="0x7f080001" />
     <public type="style" name="myBackgroundStyle" id="0x7f090000" />
@@ -3027,5 +3029,6 @@
 	<public type="id" name="users_listview" id="0x7f0c007e" />
 	<public type="id" name="relativeLayout1" id="0x7f0c007f" />
 	<public type="id" name="buttonAddUser" id="0x7f0c0080" />
+	<public type="id" name="tvMultiuser" id="0x7f0c0081" />
     <public type="integer" name="google_play_services_version" id="0x7f0d0000" />
 </resources>
